# controller/common.go
@@ -4,15 +4,16 @@ import (
 	"app/database"
 	"app/model"
 	"app/utils"
+	"crypto/tls"
 	"database/sql"
 	"encoding/xml"
 	"fmt"
-	"log"
 	"net/http"
+	"strings"
 	"time"
 
 	"github.com/gofiber/fiber/v2"
-	"github.com/tiaguinho/gosoap"
+	"siteminds.dev/gosoap"
 )
 
 // GetCountries
@@ -22,48 +23,48 @@ import (
 // @Success 200 {array} model.CountryData
 // @Router /app/common/country/list [get]
 func GetCountries(c *fiber.Ctx) error {
-    db := database.GetDb()
-    if db == nil {
-        utils.ILogger.Info().Msg("db is nil")
-        return c.JSON([]model.CountryData{})
-    }
+	db := database.GetDb()
+	if db == nil {
+		utils.ILogger.Info().Msg("db is nil")
+		return c.JSON([]model.CountryData{})
+	}
 
-    rows, err := db.Query("SELECT COUNTRY_CODE, COUNTRY_NAME, TEL_CODE FROM NOVA_COUNTRY")
-    if err != nil {
-        if rows != nil {
-            defer rows.Close()
-        }
-        
-        utils.Logger.Err(err).Msg(err.Error())
-        return c.JSON([]model.CountryData{})
-    }
+	rows, err := db.Query("SELECT COUNTRY_CODE, COUNTRY_NAME, TEL_CODE FROM NOVA_COUNTRY")
+	if err != nil {
+		if rows != nil {
+			defer rows.Close()
+		}
 
-    defer rows.Close()
+		utils.Logger.Err(err).Msg(err.Error())
+		return c.JSON([]model.CountryData{})
+	}
 
-    var (
-        ccode sql.NullString
-        cname sql.NullString
-        telcode sql.NullString
-    )
-    var ls []model.CountryData = make([]model.CountryData, 0)
+	defer rows.Close()
 
-    for rows.Next() {
-        err := rows.Scan(&ccode, &cname, &telcode)
+	var (
+		ccode   sql.NullString
+		cname   sql.NullString
+		telcode sql.NullString
+	)
+	var ls []model.CountryData = make([]model.CountryData, 0)
 
-        if err != nil {
-            utils.Logger.Err(err).Msg(err.Error())
-            continue
-        }
+	for rows.Next() {
+		err := rows.Scan(&ccode, &cname, &telcode)
 
-        o := model.CountryData{
-            CountryCode: ccode.String,
-            CountryName: cname.String,
-            TelCode: telcode.String,
-        }
-        ls = append(ls, o)
-    }
+		if err != nil {
+			utils.Logger.Err(err).Msg(err.Error())
+			continue
+		}
 
-    return c.JSON(ls)
+		o := model.CountryData{
+			CountryCode: ccode.String,
+			CountryName: cname.String,
+			TelCode:     telcode.String,
+		}
+		ls = append(ls, o)
+	}
+
+	return c.JSON(ls)
 }
 
 // Authenticate
@@ -73,47 +74,134 @@ func GetCountries(c *fiber.Ctx) error {
 // @Success 200 {object} model.Token
 // @Router /app/common/login [get]
 func Authenticate(c *fiber.Ctx) error {
-    url := "https://nh-europa.nova-vesalius.com/ihp_uat/web_services/AUTHENTICATION/Login.cfc?WSDL"
-    httpClient := &http.Client{
-		Timeout: 1500 * time.Millisecond,
+	tr := &http.Transport{
+		TLSClientConfig: &tls.Config{InsecureSkipVerify: true},
+	}
+	url := "https://nh-europa.nova-vesalius.com/ihp_uat/web_services/AUTHENTICATION/Login.cfc?WSDL"
+	httpClient := &http.Client{
+		Timeout:   1500 * time.Millisecond,
+		Transport: tr,
 	}
 
-    soap, err := gosoap.SoapClient(url, httpClient)
+	config := gosoap.Config{
+		Endpoint: "https://nh-europa.nova-vesalius.com/ihp_uat/web_services/AUTHENTICATION/Login.cfc",
+	}
+	soap, err := gosoap.SoapClientWithConfig(url, httpClient, &config)
 	if err != nil {
-		log.Fatalf("SoapClient error: %s", err)
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
+			"code":    "ERROR",
+			"message": fmt.Errorf("SoapClient: %v", err).Error(),
+		})
 	}
 
-    params := gosoap.Params{
+	params := gosoap.Params{
 		"company_code": "IHP",
-        "system_code": "MOBILE",
-        "password": "password",
+		"system_code":  "MOBILE",
+		"password":     "password",
 	}
 
-    res, err := soap.Call("login", params)
+	res, err := soap.Call("login", params)
 	if err != nil {
-		log.Fatalf("Call error: %s", err)
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
+			"code":    "ERROR",
+			"message": fmt.Errorf("SoapCall: %v", err).Error(),
+		})
 	}
 
-    var r model.LoginResponse
-    res.Unmarshal(&r)
-    result := model.LoginReturn{}
-    resulterr := model.ReturnErr{}
-    fmt.Println(r.Return)
-    err = xml.Unmarshal([]byte(r.Return), &result)
-    if err != nil {
-		log.Fatalf("xml.Unmarshal error: %s", err)
+	var r model.LoginResponse
+	res.Unmarshal(&r)
+	s := strings.ReplaceAll(r.Return, `encoding="UTF-8">`, `encoding="UTF-8"?>`)
+	fmt.Println(s)
+	result := model.LoginReturn{}
+	resulterr := model.ReturnErr{}
+	err = xml.Unmarshal([]byte(s), &result)
+	if err != nil {
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
+			"code":    "ERROR",
+			"message": fmt.Errorf("unmarshal return result: %v", err).Error(),
+		})
 	}
 
-    if result.Token.Token_number == "" {
-        err = xml.Unmarshal([]byte(r.Return), &resulterr)
-        if err != nil {
-            log.Fatalf("xml.Unmarshal error: %s", err)
-        }
+	if result.Token.Token_number == "" {
+		err = xml.Unmarshal([]byte(s), &resulterr)
+		if err != nil {
+			return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
+				"code":    "ERROR",
+				"message": fmt.Errorf("unmarshal return resultErr: %v", err).Error(),
+			})
+		}
 
-        return c.JSON(resulterr.Error)
-    }
+		return c.JSON(resulterr.Error)
+	}
 
-    return c.JSON(result.Token)
+	return c.JSON(result.Token)
+}
+
+// Logout
+//
+// @Tags Common
+// @Produce json
+// @Param        token   path      string  true  "token"
+// @Success 200 {object} model.Success
+// @Router /app/common/logout/{token} [get]
+func Logout(c *fiber.Ctx) error {
+	tr := &http.Transport{
+		TLSClientConfig: &tls.Config{InsecureSkipVerify: true},
+	}
+	url := "https://nh-europa.nova-vesalius.com/ihp_uat/web_services/AUTHENTICATION/Logout.cfc?WSDL"
+	httpClient := &http.Client{
+		Timeout:   1500 * time.Millisecond,
+		Transport: tr,
+	}
+
+	config := gosoap.Config{
+		Endpoint: "https://nh-europa.nova-vesalius.com/ihp_uat/web_services/AUTHENTICATION/Logout.cfc",
+	}
+	soap, err := gosoap.SoapClientWithConfig(url, httpClient, &config)
+	if err != nil {
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
+			"code":    "ERROR",
+			"message": fmt.Errorf("SoapClient: %v", err).Error(),
+		})
+	}
+
+	params := gosoap.Params{
+		"token_number": c.Params("token"),
+	}
+
+	res, err := soap.Call("Logout", params)
+	if err != nil {
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
+			"code":    "ERROR",
+			"message": fmt.Errorf("SoapCall: %v", err).Error(),
+		})
+	}
+
+	var r model.LoginResponse
+	res.Unmarshal(&r)
+	result := model.LogoutReturn{}
+	resulterr := model.ReturnErr{}
+	err = xml.Unmarshal([]byte(r.Return), &result)
+	if err != nil {
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
+			"code":    "ERROR",
+			"message": fmt.Errorf("unmarshal return: %v", err).Error(),
+		})
+	}
+
+	if result.Success.Code == "" {
+		err = xml.Unmarshal([]byte(r.Return), &resulterr)
+		if err != nil {
+			return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
+				"code":    "ERROR",
+				"message": fmt.Errorf("unmarshal return: %v", err).Error(),
+			})
+		}
+
+		return c.JSON(resulterr.Error)
+	}
+
+	return c.JSON(result.Success)
 }
 
 // GetPatientData
@@ -123,42 +211,61 @@ func Authenticate(c *fiber.Ctx) error {
 // @Success 200 {object} model.Patient
 // @Router /app/common/patient [get]
 func GetPatientData(c *fiber.Ctx) error {
-    url := "https://nh-europa.nova-vesalius.com/ihp_uat/web_services/PATIENT/GetPatientData.cfc?WSDL"
+	tr := &http.Transport{
+		TLSClientConfig: &tls.Config{InsecureSkipVerify: true},
+	}
+	url := "https://nh-europa.nova-vesalius.com/ihp_uat/web_services/PATIENT/GetPatientData.cfc?WSDL"
 	httpClient := &http.Client{
-		Timeout: 1500 * time.Millisecond,
+		Timeout:   1500 * time.Millisecond,
+		Transport: tr,
 	}
 
-    soap, err := gosoap.SoapClient(url, httpClient)
+	config := gosoap.Config{
+		Endpoint: "https://nh-europa.nova-vesalius.com/ihp_uat/web_services/PATIENT/GetPatientData.cfc",
+	}
+	soap, err := gosoap.SoapClientWithConfig(url, httpClient, &config)
 	if err != nil {
-		log.Fatalf("SoapClient error: %s", err)
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
+			"code":    "ERROR",
+			"message": fmt.Errorf("SoapClient: %v", err).Error(),
+		})
 	}
 
 	params := gosoap.Params{
 		"prn": "20-000110",
 	}
 
-    res, err := soap.Call("getPatientData", params)
+	res, err := soap.Call("getPatientData", params)
 	if err != nil {
-		log.Fatalf("Call error: %s", err)
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
+			"code":    "ERROR",
+			"message": fmt.Errorf("SoapCall: %v", err).Error(),
+		})
 	}
 
-    var r model.PatientDataResponse
+	var r model.PatientDataResponse
 	res.Unmarshal(&r)
 	result := model.Return{}
-    resulterr := model.ReturnErr{}
+	resulterr := model.ReturnErr{}
 	err = xml.Unmarshal([]byte(r.Return), &result)
 	if err != nil {
-		log.Fatalf("xml.Unmarshal error: %s", err)
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
+			"code":    "ERROR",
+			"message": fmt.Errorf("unmarshal return: %v", err).Error(),
+		})
 	}
 
-    if result.Patient.Prn == "" {
-        err = xml.Unmarshal([]byte(r.Return), &resulterr)
-        if err != nil {
-            log.Fatalf("xml.Unmarshal error: %s", err)
-        }
+	if result.Patient.Prn == "" {
+		err = xml.Unmarshal([]byte(r.Return), &resulterr)
+		if err != nil {
+			return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
+				"code":    "ERROR",
+				"message": fmt.Errorf("unmarshal return: %v", err).Error(),
+			})
+		}
 
-        return c.JSON(resulterr.Error)
-    }
+		return c.JSON(resulterr.Error)
+	}
 
-    return c.JSON(result.Patient)
+	return c.JSON(result.Patient)
 }
