# docs/swagger.yaml
@@ -114,6 +114,13 @@ definitions:
       description:
         type: string
     type: object
+  model.Success:
+    properties:
+      code:
+        type: string
+      message:
+        type: string
+    type: object
   model.Todo:
     properties:
       text:
@@ -197,6 +204,23 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/model.Token'
+      tags:
+      - Common
+  /app/common/logout/{token}:
+    get:
+      parameters:
+      - description: token
+        in: path
+        name: token
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Success'
       tags:
       - Common
   /app/common/patient:
